--- a/styles.css
+++ b/styles.css
@@ -43,18 +43,19 @@ body {
   .human-win-section {
     display: flex;
     border: black solid 1px;
-    width:25%
+    width:25%;
+    height:100vh
   }
 
   .computer-win-section {
     display: flex;
-flex-direction: column;
-justify-content: start;
-align-items: center;
-flex-wrap: wrap;
-width:25%;
-border: 1px solid black;
-height: 100vh;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    width:25%;
+    border: 1px solid black;
+    height: 100vh;
   }
 
   .game-type-section{
@@ -77,4 +78,24 @@ height: 100vh;
   .difficult-game-box > h3,
   .classic-game-box > h3 {
     margin:0%
+  }
+
+  .classic-game-view,
+  .difficult-game-view {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .classic-game-view > img {
+    height: 250px;
+    width: 250px
+  }
+
+  .difficult-game-view > img {
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 250px;
+    width: 250px
   }
