--- a/styles.css
+++ b/styles.css
@@ -18,34 +18,32 @@ body {
 
   }
 
-  header{
-    text-align: center;
-  }
-
   .header {
     /* display: flex; */
     justify-content: flex-start;
-    align-items: center;
+    text-align: center;
     flex-direction: column;
   }
-
-  .human-win-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: white; */
-  }
-
-  .main-title{
+  .header > h1{
+    margin-top: 40px;
+    margin-bottom: 20px;
     font-size: 80px;
   }
 
+  .header > h3 {
+    margin-bottom: 100px;
+  }
+
   .human-win-section {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     border: black solid 1px;
     width:25%;
     height:100vh
+    /* background-color: white; */
   }
+
 
   .computer-win-section {
     display: flex;
