--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,18 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(0, 213, 255);
+    background-color:rgb(102, 186, 219);
     width:280px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
   }
-
+  .difficult-game-box:hover,
+  .classic-game-box:hover{
+    background-color: rgb(0, 213, 255);
+  }
+.classic-header,
+.difficult-header {
+  margin-bottom: 10px;
+}
   
   .paper-rock,
   .paper-rock-alien,
