--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   }
   
   .hidden {
-    visibility: hidden;
+    display: none !important;
   }
 
   .main-game-section{
@@ -36,8 +36,21 @@ body {
   }
 
 
-   .computer-win-section,
-   .human-win-section  {
+  .computer-win-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    width:15%;
+    height: 100vh;
+    background-color:rgb(102, 186, 219);
+  }
+  
+  
+  
+  
+  .human-win-section  {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -82,14 +95,16 @@ body {
     width:280px;
     margin-bottom: 50px;
   }
+  
   .difficult-game-box:hover,
   .classic-game-box:hover{
     background-color: rgb(0, 213, 255);
   }
-.classic-header,
-.difficult-header {
-  margin-bottom: 10px;
-}
+
+  .classic-header,
+  .difficult-header {
+    margin-bottom: 10px;
+  }
   
   .paper-rock,
   .paper-rock-alien,
@@ -109,6 +124,7 @@ body {
     margin-top: 0px;
     margin-bottom: 50px;
   }
+  
 
   .classic-game-view,
   .difficult-game-view {
@@ -128,4 +144,8 @@ body {
     margin-right: 50px;
     height: 200px;
     width: 200px
+  }
+
+  .hidden {
+    display: none !important;
   }
