--- a/styles.css
+++ b/styles.css
@@ -1,157 +1,140 @@
 body {
-    font-family: "Arvo", serif;
-    font-weight: 400;
-    font-style: normal;
-    display:flex;
-    flex-direction: row;
-    background-color:skyblue;
-    margin:0%
-  }
-  
-  .hidden {
-    display: none !important;
-  }
+  font-family: "Arvo", serif;
+  font-weight: 400;
+  font-style: normal;
+  display: flex;
+  flex-direction: row;
+  background-color: skyblue;
+  margin: 0%;
+}
 
-  .main-game-section{
-    display:flex;
-    flex-direction: column;
-    width:75%
-  }
+.main-game-section {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+}
 
-  .header {
-    justify-content: flex-start;
-    text-align: center;
-    flex-direction: column;
-  }
-  
-  .header > h1{
-    margin-top: 30px;
-    margin-bottom: 20px;
-    font-size: 80px;
-  }
+.header {
+  justify-content: flex-start;
+  text-align: center;
+  flex-direction: column;
+}
 
-  .header > h3 {
-    margin-top: 20px;
-    margin-bottom: 100px;
-    font-size: 30px;
-  }
+.header > h1 {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-size: 80px;
+}
 
+.header > h3 {
+  margin-top: 20px;
+  margin-bottom: 100px;
+  font-size: 30px;
+}
 
-  .computer-win-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    flex-wrap: wrap;
-    width:15%;
-    height: 100vh;
-    background-color:rgb(102, 186, 219);
-  }
-  
-  
-  .human-win-section  {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    flex-wrap: wrap;
-    width:15%;
-    height: 100vh;
-    background-color:rgb(102, 186, 219);
-  }
+.computer-win-section,
+.human-win-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 15%;
+  height: 100vh;
+  background-color: rgb(102, 186, 219);
+}
 
-  .computer-emoji,
-  .human-emoji {
-    margin-bottom: 0px;
-  }
+.computer-emoji,
+.human-emoji {
+  margin-bottom: 0px;
+}
 
-  .human-text,
-  .computer-text {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
+.human-text,
+.computer-text {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
-  .change-game-button {
-    margin-top: 100px;
-    background-color: rgb(0, 221, 136);
-    height: 60px;
-    width: 150px;
-  }
+.change-game-button {
+  margin-top: 100px;
+  background-color: rgb(0, 221, 136);
+  height: 60px;
+  width: 150px;
+}
 
-  .game-type-view{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-  }
- 
+.game-type-view {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .difficult-game-box,
-  .classic-game-box {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color:rgb(102, 186, 219);
-    width:280px;
-    margin-bottom: 50px;
-  }
-  
-  .difficult-game-box:hover,
-  .classic-game-box:hover{
-    background-color: rgb(0, 213, 255);
-  }
+.difficult-game-box,
+.classic-game-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgb(102, 186, 219);
+  width: 280px;
+  margin-bottom: 50px;
+}
 
-  .classic-header,
-  .difficult-header {
-    margin-bottom: 10px;
-  }
-  
-  .paper-rock,
-  .paper-rock-alien,
-  .scissors-paper-lizard,
-  .lizard-paper-alien {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-  
-  .rock-scissors,
-  .rock-scissors-lizard {
-    margin-bottom: 0px;
-  }
+.difficult-game-box:hover,
+.classic-game-box:hover {
+  background-color: rgb(0, 213, 255);
+}
 
-  .scissors-paper,
-  .alien-scissors-rock {
-    margin-top: 0px;
-    margin-bottom: 50px;
-  }
-  
+.classic-header,
+.difficult-header {
+  margin-bottom: 10px;
+}
 
-  .classic-game-view {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
+.paper-rock,
+.paper-rock-alien,
+.scissors-paper-lizard,
+.lizard-paper-alien {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
-  .difficult-game-view {
-  display:flex;
+.rock-scissors,
+.rock-scissors-lizard {
+  margin-bottom: 0px;
+}
+
+.scissors-paper,
+.alien-scissors-rock {
+  margin-top: 0px;
+  margin-bottom: 50px;
+}
+
+.classic-game-view {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.difficult-game-view {
+  display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  }
-
-  .classic-game-view > img {
-    height: 200px;
-    width: 200px
-  }
-
-  .difficult-game-view > img {
-    margin-left: 50px; 
-    margin-right: 50px;
-    height: 200px;
-    width: 200px
-  }
-.fighter-game-view{
-  display:flex;
-
 }
-  .hidden {
-    display: none !important;
-  }
+
+.classic-game-view > img {
+  height: 200px;
+  width: 200px;
+}
+
+.difficult-game-view > img {
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 200px;
+  width: 200px;
+}
+
+.fighter-game-view {
+  display: flex;
+}
+
+.hidden {
+  display: none !important;
+}
